<?xml version="1.0"?>
<package format="2">
  <name>vitulus_gnss</name>
  <version>0.0.1</version>
  <description>Vitulus GNSS.</description>

  <maintainer email="robert.lacina@gmail.com">Robert Lacina</maintainer>
  <license>Apache 2.0</license>
  <author email="robert.lacina@gmail.com">Robert Lacina</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>trajectory_msgs</build_depend>

<!--  <exec_depend>roscpp</exec_depend>-->
</package>

